# smbox

./: Cargo.toml  LICENSE  README.md  gen_test_email.sh
src/: highlight.rs  iface.rs  main.rs  mbox.rs
