[package]
name = "smbox"
version = "0.2.0"
authors = ["Toby Hutton <toby@grusly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4"
itertools = "0"
mktemp = "0"
regex = "1"
termion = "1"
toml = "0"
tui = "0"
