[package]
name = "smbox"
version = "0.2.1"
authors = ["Toby Hutton <toby@grusly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
directories = "6.0.0"
fxhash = "0.2.1"
itertools = "0.14.0"
mktemp = "0.5.1"
regex = "1.11.0"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_regex = "1.1.0"
termion = "4.0.3"
toml = "0.9.8"
tui = "0.19.0"
